--- a/style.css
+++ b/style.css
@@ -5,41 +5,48 @@ body {
     background-color: #f4f4f4;
 }
 
-header, nav, main, footer {
-    max-width: 800px;
-    margin: auto;
-    padding: 20px;
-    background-color: #fff;
+header, footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
 }
 
 header h1 {
-    text-align: center;
+    margin: 0;
 }
 
 nav ul {
-    list-style-type: none;
+    list-style: none;
     padding: 0;
 }
 
 nav ul li {
     display: inline;
-    margin-right: 10px;
+    margin-right: 20px;
 }
 
 nav ul li a {
     text-decoration: none;
-    color: #333;
+    color: white;
 }
 
-main {
+nav ul li a:hover {
+    text-decoration: underline;
+}
+
+main section {
+    margin: 15px;
+    padding: 15px;
+    background-color: white;
     text-align: center;
 }
 
-footer {
-    text-align: center;
-    margin-top: 20px;
+footer p {
+    margin: 0;
 }
+
 img {
     max-width: 100%;
-    height: auto; 
+    height: auto;
 }
