--- a/style.css
+++ b/style.css
@@ -51,9 +51,8 @@ footer p {
     margin: 0;
 }
 
-/* 图片样式 */
-img {
-    max-width: 500px; /* 设置图片的最大宽度为500px */
-    height: auto; /* 保持图片的纵横比 */
+/* 武汉市页面图片样式 */
+.wuhan-img {
+    width: 500px; /* 设置图片的固定宽度为500px */
+    height: 300px; /* 设置图片的固定高度为300px */
 }
-    
