--- a/style.css
+++ b/style.css
@@ -53,6 +53,6 @@ footer p {
 
 /* 武汉市页面图片样式 */
 .wuhan-img {
-    width: 500px; /* 设置图片的固定宽度为500px */
-    height: 300px; /* 设置图片的固定高度为300px */
+    width: 200px; /* 设置图片的固定宽度为500px */
+    height:100; /* 设置图片的固定高度为300px */
 }
